@@ -27,13 +27,14 @@ Alien::o2dll                                   = 0.02
 [Prereqs]
 Alien::bz2                                     = 0.11
 Alien::Libarchive                              = 0.18
-Alien::MSYS                                    = 0.04
+;Alien::Libarchive::MSWin32                    = 0.04
+Alien::MSYS                                    = 0.07
 ;Alien::o2dll                                  = 0.02
 ;Alien::Packages::Cygwin                       = 0.02
 AnyEvent::Finger                               = 0.09
-AnyEvent::Git::Wrapper                         = 0.05
+AnyEvent::Git::Wrapper                         = 0.06
 AnyEvent::Ident                                = 0.06
-AnyEvent::Open3::Simple                        = 0.78
+AnyEvent::Open3::Simple                        = 0.79
 AnyEvent::WebSocket::Client                    = 0.21
 App::cpangitify                                = 0.07
 App::RegexFileUtils                            = 0.06
@@ -59,14 +60,14 @@ Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::TextTabs                  = 0.03
 Dist::Zilla::Plugin::TwitterBootstrap          = 0.04
 Dist::Zilla::PluginBundle::ACPS                = 0.28
-Dist::Zilla::PluginBundle::Author::Plicease    = 1.47
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.48
 FFI::Util                                      = 0.07
 File::Listing::Ftpcopy                         = 0.05
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
-Mojolicious::Plugin::TtRenderer                = 1.51
-PkgConfig                                      = 0.07120
+Mojolicious::Plugin::TtRenderer                = 1.52
+PkgConfig                                      = 0.07420
 PlugAuth                                       = 0.26
 PlugAuth::Client                               = 0.20
 PlugAuth::Client::Tiny                         = 0.01
@@ -77,15 +78,16 @@ PlugAuth::Plugin::DBIAuth                      = 0.03
 PlugAuth::Plugin::Finger                       = 0.01
 PlugAuth::Plugin::LDAP                         = 0.06
 Shell::Config::Generate                        = 0.12
-Shell::Guess                                   = 0.02
+Shell::Guess                                   = 0.03
 Test::CChecker                                 = 0.05
-Test::Clustericious::Cluster                   = 0.14
+Test::Clustericious::Cluster                   = 0.15
 Test::Fixme                                    = 0.10
 URI::ws                                        = 0.03
 WebService::LiveJournal                        = 0.07
 WebService::TwitterBootstrap::Download::Custom = 0.03
+Win32::Shortcut::Readlink                      = 0.02
 WWW::Bugzilla::BugTree                         = 0.03
-Yars                                           = 0.99
+Yars                                           = 1.00
 Yars::Client                                   = 0.94
 
 AnyEvent                                       = 0
